--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "homepage": "https://kgronner1.github.io/social-portfolio/",
   "name": "social-portfolio",
   "version": "0.0.0",
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
